--- a/package.json
+++ b/package.json
@@ -7,17 +7,6 @@
   },
   "dependencies": {
     "express-session": "^1.17.1",
-    "cookie-parser": "~1.4.5",
-    "cors": "^2.8.5",
-    "debug": "~4.3.1",
-    "express": "~4.17.1",
-    "http-errors": "~1.8.0",
-    "jade": "~1.11.0",
-    "mongodb": "^3.6.6",
-    "mongodb-core": "^3.2.7",
-    "morgan": "~1.10.0"
-  },
-  "devDependencies": {
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.7",
     "mongoose-currency": "^0.2.0",
@@ -27,6 +16,15 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0",
-    "session-file-store": "^1.5.0"
+    "session-file-store": "^1.5.0",
+    "cookie-parser": "~1.4.5",
+    "cors": "^2.8.5",
+    "debug": "~4.3.1",
+    "express": "~4.17.1",
+    "http-errors": "~1.8.0",
+    "jade": "~1.11.0",
+    "mongodb": "^3.6.6",
+    "mongodb-core": "^3.2.7",
+    "morgan": "~1.10.0"
   }
 }
